<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skill_img">skill_img</string>
    <string name="phone">phone</string>
    <string name="error_loading_data_from_heroku">Error Loading data from Heroku</string>
    <string name="title_size">title</string>
    <string name="author_size">author</string>
    <string name="learner_s_name">Learner\'s Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>
</resources>